<resources>
    <string name="app_name">Launcher002</string>
    <string name="welcome">Welcome</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="search_or_type_a_website">search or type a website</string>
    <string name="search_or_type_a_websitee">search or type a website</string>
    <string name="type_or_search_websiteee">Type or Search Website</string>
    <string name="send_message_via_chooser">Send message via chooser</string>
    <string name="send_message_silently">Send message silently</string>
    <string name="start_service">Start service</string>
    <string name="preference_file_key">com.example.marwa.launcher002.PREFERENCE_FILE_KEY</string>
    <string name="preference_previous_id"></string>
    <string name="preference_addressee">Email Addressee</string>
    <string name="preference_addressee_default">benaichasiwar@gmail.com</string>
    <string name="settings">Settings</string>
    <string name="A01">Choose your Background</string>
    <string name="A02">TODO</string>
    <string name="A03">TODO</string>
    <string name="A04">TODO</string>
    <string name="A05">TODO</string>
    <string name="A06">TODO</string>
    <string name="A07">TODO</string>
    <string name="A08">TODO</string>
    <string name="A09">TODO</string>
    <string name="Config05012019">Configuration</string>
    <string name="target_code">Target Code</string>
    <string name="confirm234">Confirm</string>
</resources>
