<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyThemes"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="320dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:text="@string/A01"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="168dp"
            android:layout_height="89dp"
            android:layout_weight="1"
            android:contentDescription="@string/A02"
            app:srcCompat="@drawable/logo2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/okfine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/A03"
            app:srcCompat="@drawable/m15" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/m16"
            android:contentDescription="@string/A04" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/m10"
            android:contentDescription="@string/A05" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/m05"
            android:contentDescription="@string/A06" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/m11"
            android:contentDescription="@string/A07" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/m04"
            android:contentDescription="@string/A09" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/mprev4"
        android:contentDescription="@string/A08" />


</LinearLayout>